--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <footer>
         <p>
-            MIT License
+            Apache-2.0 license
             <br>
             Copyright &copy; 2022 AmirAli
         </p>
