--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <meta name="theme-color" content="#D2691E">
+    <meta name="google-site-verification" content="5T0m9kKWaxCqERruoICtEJ3FZafkPjdasjjj4vxsY5A" />
 </head>
 
 <body>
